<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jakubkarlo.com.goldwise.Activities.SignUpActivity"
    android:background="@color/appBackground">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/app_logo" />


    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/appLogo"
        android:layout_centerVertical="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/trans_white_rectangle"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/registerTitle_textView"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/registerHint_textView"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/signUpPhoneNumEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/rounded_textfield"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/phoneNumberHint_editText"
                android:inputType="phone" />

            <EditText
                android:id="@+id/signUpUsernameEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/rounded_textfield"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/usernameHint_editText"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/signUpPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/rounded_textfield"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/passwordHint_editText"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/signUpRepeatPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/rounded_textfield"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/repeatPasswordHint_editText"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="110dp"
                android:layout_marginStart="110dp"
                android:background="@drawable/rounded_button"
                android:onClick="signUserUp"
                android:text="@string/signUp_button" />


        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/goBackFromSignupButton"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_below="@+id/scrollContainer"
        android:background="#00ffffff"
        android:layout_marginTop="10dp"
        android:onClick="goBack"
        android:text="@string/goBack_button" />

</RelativeLayout>
