<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context="jakubkarlo.com.goldwise.Activities.AddSavingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/trans_white_rectangle"
        android:orientation="vertical">

        <TextView
            android:id="@+id/newSavingTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/newSaving_label"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/savingTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_textfield"
            android:hint="@string/savingTitle_editText"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/savingAmountEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_textfield"
            android:hint="@string/savingAmount_editText"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <Button
            android:id="@+id/addSavingButton"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="90dp"
            android:layout_marginStart="90dp"
            android:background="@drawable/rounded_button"
            android:onClick="addSaving"
            android:text="@string/add_saving" />
    </LinearLayout>


</RelativeLayout>
