<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context="jakubkarlo.com.goldwise.Activities.AddEventActivity">

    <TextView
        android:id="@+id/newEventTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:text="@string/newEvent_label"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/newEventTitle"
        android:layout_centerInParent="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/trans_white_rectangle"
            android:orientation="vertical">

            <EditText
                android:id="@+id/eventTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_textfield"
                android:ems="10"
                android:hint="@string/event_title"
                android:inputType="textPersonName"
                android:maxLength="16"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/eventPhotoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/event_photo"
                android:textAlignment="center" />

            <ImageView
                android:id="@+id/addEventImage"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp" />

            <Button
                android:id="@+id/changeEventPhotoButton"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="90dp"
                android:layout_marginStart="90dp"
                android:background="@drawable/rounded_button"
                android:onClick="changePhoto"
                android:text="@string/change_photo_button" />

            <TextView
                android:id="@+id/eventParticipantsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="Participants"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/participantsAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_textfield"
                android:ems="10"
                android:hint="Name..."
                android:textAlignment="center" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/participantsToAddListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp" />


            <EditText
                android:id="@+id/budgetEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_textfield"
                android:ems="10"
                android:hint="@string/enterBudgetHint_editText"
                android:inputType="number"
                android:textAlignment="center" />

            <Button
                android:id="@+id/addEventButton"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="90dp"
                android:layout_marginStart="90dp"
                android:background="@drawable/rounded_button"
                android:onClick="addEventIfDataProvided"
                android:text="@string/add_event" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
