<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="jakubkarlo.com.goldwise.Fragments.DebtsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/debtsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debts_title"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:id="@+id/debtsHintsWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/debtsTitle"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Who?"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Price"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.31"
                android:text="To whom?"
                android:textAlignment="center" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/debtsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/checkboxesContainer"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_below="@id/debtsHintsWrapper"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:divider="#00000000"
            android:dividerHeight="10dp" />

        <LinearLayout
            android:id="@+id/checkboxesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/paidCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/paid_checkbox" />

            <CheckBox
                android:id="@+id/notPaidCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/notPaid_checkbox" />

            <CheckBox
                android:id="@+id/savingsCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/saving_checkbox" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
