<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context="jakubkarlo.com.goldwise.Activities.AddExpenseActivity">


    <TextView
        android:id="@+id/newExpenseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:text="@string/newExpense_label"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/newExpenseTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/trans_white_rectangle"
            android:orientation="vertical">


            <EditText
                android:id="@+id/expenseTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_textfield"
                android:ems="10"
                android:hint="@string/expenseTitle_editText"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/expenseAmountEditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_textfield"
                android:ems="10"
                android:hint="@string/expenseAmount_editText"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expenseTitleEditText" />

            <TextView
                android:id="@+id/whoPaidTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/whoPaid_textView"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/whoPaidSpinner"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expenseAmountEditText" />

            <Spinner
                android:id="@+id/whoPaidSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:popupBackground="@color/white_overlay" />

            <TextView
                android:id="@+id/whoOwesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/whoOwes_textView"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/whoOwesListView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whoPaidSpinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <!--<TextView-->
                    <!--android:id="@+id/allParticipants_TextView"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_vertical"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/checkAllParticipants_checkbox"-->
                    <!--android:textAlignment="textEnd" />-->

                <!--<CheckBox-->
                    <!--android:id="@+id/checkAllParticipantsCheckBox"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="right|center_vertical"-->
                    <!--android:layout_weight="0" />-->
            </LinearLayout>

            <ListView
                android:id="@+id/whoOwesListView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:choiceMode="multipleChoice">

            </ListView>

            <Button
                android:id="@+id/addExpenseButton"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="90dp"
                android:layout_marginStart="90dp"
                android:background="@drawable/rounded_button"
                android:onClick="addExpense"
                android:text="@string/add_expense" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
